WP i18n teams: Fix layout of the teams table on narrow screens.
Prevents overlapping of left cells with CSS-content added headers.

Props jobthomas.
Fixes #3903.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@7825 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/wp-i18n-teams/css/i18n-teams.css
+++ b/wordpress.org/public_html/wp-content/plugins/wp-i18n-teams/css/i18n-teams.css
@@ -303,7 +303,8 @@ article.page .translators-info table td:first-of-type {
 
 	article.page .translators-info table tbody td[data-column-title]:before {
 		content: attr(data-column-title);
-		position: absolute;
+		position: initial;
+		display: flex;
 		left: 10px;
 		width: 50%;
 		font-weight: bold;
